# regexp

./: .gitignore  DFA.hs  DMap.hs  Datatypes.hs  Main.hs  Makefile  NFA.hs  Parser.hs  Parsing.hs  README.md  Regex.hs  Testing.hs  regexp.cabal
app/: Main.hs
docs/: API.md
misc/: slides.md
src/: DFA.hs  DMap.hs  Datatypes.hs  Main.hs  NFA.hs  Parser.hs  Testing.hs
test/: Testing.hs
